Run functional tests on all routes
