# app/static/swagger.yaml
@@ -1,9 +1,9 @@
 swagger: "2.0"
 info:
   title: Biblia AI Chat API
-  description: An AI Chat API to interact with Bible characters.
+  description: AI Chat API to chat with Bible characters.
   version: "1.0"
-basePath: /api/v1.0
+basePath: /api/v1.0.0
 schemes:
   - http
 tags:
@@ -29,13 +29,28 @@ paths:
       tags:
         - Auth
       summary: Register a new user
+      consumes:
+        - multipart/form-data
       parameters:
-        - in: body
-          name: user
-          description: The user to register
+        - in: formData
+          name: image
+          type: file
+          description: User profile picture
+        - in: formData
+          name: username
+          type: string
+          description: Username
           required: true
-          schema:
-            $ref: "#/definitions/User"
+        - in: formData
+          name: email
+          type: string
+          description: User email
+          required: true
+        - in: formData
+          name: password
+          type: string
+          description: User password
+          required: true              
       responses:
         201:
           description: User registered successfully
@@ -110,22 +125,27 @@ paths:
           description: Invalid email address
         500:
           description: Internal server error
-  /auth/reset-password:
+  /auth/reset-password/{token}:
     post:
       tags:
         - Auth
       summary: Reset a user's password
       parameters:
+        - in: path
+          name: token
+          type: string
+          description: User token
+          required: true
         - in: body
-          name: reset_info
-          description: The information required to reset the password
+          name: password
+          description:: reset_info
           required: true
           schema:
             type: object
             properties:
-              token:
+              password:
                 type: string
-              new_password:
+              confirm-password:
                 type: string
       responses:
         200:
@@ -168,13 +188,20 @@ paths:
         - Characters
       summary: Add Bible character to chat list
       parameters:
-        - in: body
-          name: character
-          required: true
+        - in: formData
+          name: image
+          type: file
+          description: Character profile picture
+        - in: formData
+          name: name
           type: string
-          description: The character to create
-          schema:
-            $ref: "#/definitions/Character"
+          description: Bible character name
+          required: true
+        - in: formData
+          name: description
+          type: string
+          description: Character description
+          required: true  
       responses:
         201:
           description: Character created successfully
@@ -207,7 +234,7 @@ paths:
       summary: Search for character chat by name
       parameters:
         - in: query
-          name: query
+          name: name
           required: true
           type: string
           description: The search term to use
@@ -228,7 +255,7 @@ paths:
         - Characters
       summary: Clear character chat with character ID
       parameters:
-        - in: body
+        - in: path
           name: character_id
           required: true
           type: integer
@@ -252,7 +279,7 @@ paths:
           type: integer
           description: Chat with character by ID
         - in: body
-          name: string
+          name: content
           required: true
           type: string
           description: A message to start chat
@@ -261,12 +288,12 @@ paths:
               content:
                 type: string
       responses:
-      200:
-        description: Chat created successfully
-      404:
-        description: Character not found
-      500:
-        description: Internal server error
+        200:
+          description: Chat created successfully
+        404:
+          description: Character not found
+        500:
+          description: Internal server error
   /characters/{character_id}/chat/{message_id}/delete:
     delete:
       tags:
@@ -314,7 +341,6 @@ definitions:
       - username
       - password
       - profile_picture_url
-      - bio
     properties:
       email:
         type: string
